# Jellyfin-Migrator

./: README.md  jellyfin_migrator.py  jellyfin_migrator_linux_config.py  pyproject.toml  run_id_scanner.py  run_migrator.py
jellyfin_migrator/: __main__.py  core.py  linux_config.py  windows_config.py
jellyfin_migrator/demo/: demo_media.py  jellyfin_apt_variant.py  jellyfin_docker_variant.py  jellyfin_init.py  oci_container.py
tests/: make_aptvariant_container.py  make_official_docker_variant.py  test_end_to_end.py
