[build-system]
requires = ["setuptools>=65.6.3", "wheel>=0.38.4"]

[project]
name = "jellyfin_migrator"
dynamic = ["version"]
description = "jellyfin migrator"
authors = [
    {name = "Max Zuidberg", email = "MMMZZZZ@users.noreply.github.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
#classifiers = []
#dependencies = []

[console_scripts]
jellyfin-migrator = jellyfin_migrator.core:main
jellyfin-id-scanner = jellyfin_migrator.id_scanner
